--- a/app/views/login.html
+++ b/app/views/login.html
@@ -6,13 +6,13 @@
   <form class="signup-form" id="user_new"  >
     <div class="form-group">
       <label for="user_email">*Email </label>
-      <input required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" id="user_email" ng-model="user.email" class="custom-validation form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
+      <input required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" id="user_email" ng-model="user.email" class="custom-validation v-email form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
     </div>
     <div class="form-group">
       <label for="{{user.passwordId}}">*Password (min. 8 characters)</label>
       <input required id="{{user.passwordId}}" ng-model="user.password" class="custom-validation form-control" type="password" name="password" autocomplete="off">
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-class="$scope.formValitidyStatus?'allright':'has-error'">
     <button type="submit" class="btn btn-default" ng-click="login(user)">Submit</button>
     </div>
   </form>
