--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -3,32 +3,32 @@
 </div>
 
 <form class="signup-form form-horizontal" id="user_new"  >
-  <form-group>
+  <div class="form-group">
     <label class="control-label" for="user_name">*First Name
     </label>
     <input  required ng-model="user.name" id="user_name" class="custom-validation v-name form-control" type="text" name="name" placeholder="Tony Smith" autocomplete="name">
     <span class='help-block'></span>
-  </form-group>
-  <form-group>
+  </div>
+  <div class="form-group">
     <label for="user_email">*Email </label>
-    <input required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" id="user_email" ng-model="user.email" class="custom-validation form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
+    <input required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" id="user_email" ng-model="user.email" class="custom-validation v-email form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
     <span class='help-block'></span>
-  </form-group>
-  <form-group>
+  </div>
+  <div class="form-group">
     <label for="user_password">*Password (min. 8 characters)</label>
     <input required id="user_password" ng-model="user.password" class="v-password custom-validation form-control" type="password" name="password" autocomplete="off">
     <span class='help-block'></span>
-  </form-group>
-  <form-group>
+  </div>
+  <div class="form-group">
     <label for="{{user.repeatPasswordId}}">*Please repeat your password</label>
     <input required id="{{user.repeatPasswordId}}" ng-model="user.repeatPassword" class="v-repeat-password custom-validation form-control " type="password" name="password" autocomplete="off">
     <span class='help-block'></span>
-  </form-group>
-  <form-group>
+  </div>
+  <div class="form-group">
     <label for="user_bday">Birthday</label>
     <input id="user_bday" class="form-control" ng-model="user.bday" type="date" name="bday" autocomplete="bday">
-  </form-group>
-  <form-group>
+  </div>
+  <div class="form-group">
     <label for="user_favourite_event">You favorite type of event:</label>
     <input id="user_favourite_event" class="form-control" ng-model="user.favorite" list="event-types" name="favorite_event">
     <datalist id="event-types">
@@ -38,6 +38,10 @@
       <option value="Dinner out">
       <option value="Going out to the movies">
     </datalist>
-  </form-group>
-  <button type="submit" class="btn btn-default" ng-click="submitSignUp(user)">Submit</button>
+  </div>
+  <div class="form-group" ng-class="formValitidyStatus?'allright':'has-error'">
+      <button type="button" id="btn_submit_event" class="btn btn-default" ng-click="submitSignUp(user)">Submit</button>
+      <span class="help-block">Please fill all required fields, before submit</span>
+  </div>
+
 </form>
