--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -20,8 +20,8 @@
     <span class='help-block'></span>
   </div>
   <div class="form-group">
-    <label for="{{user.repeatPasswordId}}">*Please repeat your password</label>
-    <input required id="{{user.repeatPasswordId}}" ng-model="user.repeatPassword" class="v-repeat-password custom-validation form-control " type="password" name="password" autocomplete="off">
+    <label for="repeat_password">*Please repeat your password</label>
+    <input required id="repeat_password" ng-model="user.repeatPassword" class="v-repeat-password custom-validation form-control " type="password" name="password" autocomplete="off">
     <span class='help-block'></span>
   </div>
   <div class="form-group">
