--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
   <div ng-show="error" class="alert alert-danger" >
     <span class="sr-only">Error:</span>
     <span>{{error.message}}</span>
