--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -2,7 +2,7 @@
   <span>{{authCtrl.error.message}}</span>
 </div>
 
-<form class="signup-form form-horizontal" id="user_new"  >
+<form class="signup-form" id="user_new"  >
   <div class="form-group">
     <label class="control-label" for="user_name">*Full Name
     </label>
