--- a/app/views/event.html
+++ b/app/views/event.html
@@ -28,14 +28,15 @@
     </div>
     <div class="form-group">
       <label for="event_end_date_time">*Event ends</label>
-      <input type="datetime-local" id="event_end_date_time" min="{{eventData.event_start_date_time}}" aria-label="required input Event end date and time" ng-model="eventData.event_end_date_time" class="custom-validation v-date-end form-control" name="event_end_date_time" placeholder="" required>
+      <input type="datetime-local" id="event_end_date_time" ng-min="{{eventData.event_start_date_time}}" min="{{eventData.event_start_date_time}}" aria-label="required input Event end date and time" ng-model="eventData.event_end_date_time" class="custom-validation v-date-end form-control" name="event_end_date_time" placeholder="" required>
     </div>
   </fieldset>
 
 
   <fieldset id="event-location">
     <div class="form-group" id="location-auto-complete">
-        <input id="autocomplete" aria-label="optional input for address"  class="custom-validation v-name  form-control" placeholder="Enter your address" onFocus="geolocate()" type="text" required>
+      <label for="autocomplete" class="label">Address search</label>
+      <input id="autocomplete" aria-label="required input, start type your address"  class="custom-validation v-name  form-control" placeholder="Enter your address" onFocus="geolocate()" type="text" required>
     </div>
     <div class="form-group" id="address">
         <label class="label">Street address</label>
