--- a/app/views/event.html
+++ b/app/views/event.html
@@ -22,13 +22,43 @@
   </fieldset>
 
   <fieldset id="event-time-and-date">
-    <div class="form-group">
+    <div class="form-group date-time">
       <label for="event_start_date_time">*Event starts</label>
-      <input type="datetime-local" id="event_start_date_time" min="{{minDate}}" aria-label="required input Event start date and time" ng-model="eventData.event_start_date_time" class="custom-validation v-date-start form-control" name="event_start_date_time" placeholder="" required>
+      <div>
+        <input type="text"
+               id="event_start_date_time"
+               min="{{minDate}}"
+               aria-label="required input Event start date and time"
+               class="custom-validation v-date-start form-control"
+               name="event_start_date_time"
+               placeholder=""
+               required
+               datetime-picker="dd MMM yyyy HH:mm" ng-model="startDateTime" is-open="isCalendarOpen.start"  />
+        <button aria-label="calendar" type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'start')">
+          <i class="glyphicon glyphicon-calendar" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
-    <div class="form-group">
+    <div class="date-time form-group">
       <label for="event_end_date_time">*Event ends</label>
-      <input type="datetime-local" id="event_end_date_time" ng-min="{{eventData.event_start_date_time}}" min="{{eventData.event_start_date_time}}" aria-label="required input Event end date and time" ng-model="eventData.event_end_date_time" class="custom-validation v-date-end form-control" name="event_end_date_time" placeholder="" required>
+        <div>
+          <input type="text"
+                 datetime-picker="dd MMM yyyy HH:mm"
+                 ng-model="endDateTime"
+                 is-open="isCalendarOpen.end"
+                 id="event_end_date_time"
+                 ng-min="{{eventData.event_start_date_time}}"
+                 min="{{eventData.event_start_date_time}}"
+                 aria-label="required input Event end date and time"
+                 ng-model="eventData.event_end_date_time"
+                 class="custom-validation v-date-end form-control"
+                 name="event_end_date_time"
+                 placeholder=""
+                 required />
+            <button aria-label="calendar" type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'end')">
+              <i class="glyphicon glyphicon-calendar" aria-hidden="true"></i>
+            </button>
+      </div>
     </div>
   </fieldset>
 
@@ -88,6 +118,29 @@
 
     </div>
   </fieldset>
+
+  <!--<fieldset>-->
+    <!--<p class="input-group">-->
+      <!--<input type="text"-->
+             <!--class="form-control"-->
+             <!--datetime-picker="dd MMM yyyy HH:mm" ng-model="startDateTime" is-open="isCalendarOpen.start"  />-->
+      <!--<span class="input-group-btn">-->
+          <!--<button type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'start')"><i class="fa fa-calendar"></i></button>-->
+      <!--</span>-->
+    <!--</p>-->
+
+    <!--<p class="input-group">-->
+      <!--<input type="text"-->
+             <!--class="form-control"-->
+             <!--datetime-picker="dd MMM yyyy HH:mm" ng-model="endDateTime" is-open="isCalendarOpen.end"  />-->
+    <!--<span class="input-group-btn">-->
+        <!--<button type="button" class="btn btn-default" ng-click="openCalendar($event, prop, 'end')"><i class="fa fa-calendar"></i></button>-->
+    <!--</span>-->
+    <!--</p>-->
+
+  <!--</fieldset>-->
+
+
 </form>
 
 <!--START location auto-complete code-->
